@@ -1,5 +1,6 @@
 Version 2.02.89 - 
 ==================================
+  Simplify code for lvm worker thread in clvmd.
   Use pthread_barrier to synchronize clvmd threads at startup.
   Limit clvmd's thread size to 128KiB.
   Reduce default preallocated stack size to 64KiB.
